--- a/src/views/layouts/layout.njk
+++ b/src/views/layouts/layout.njk
@@ -1,10 +1,10 @@
 {# Example that changes every setting in the template #}
 
-{% from "../../govuk-frontend/govuk/components/back-link/macro.njk" import govukBackLink %}
-{% from "../../govuk-frontend/govuk/components/skip-link/macro.njk" import govukSkipLink %}
-{% from "../../govuk-frontend/govuk/components/header/macro.njk" import govukHeader %}
-{% from "../../govuk-frontend/govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
-{% from "../../govuk-frontend/govuk/components/footer/macro.njk" import govukFooter %}
+{% from "../govuk-frontend/govuk/components/back-link/macro.njk" import govukBackLink %}
+{% from "../govuk-frontend/govuk/components/skip-link/macro.njk" import govukSkipLink %}
+{% from "../govuk-frontend/govuk/components/header/macro.njk" import govukHeader %}
+{% from "../govuk-frontend/govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+{% from "../govuk-frontend/govuk/components/footer/macro.njk" import govukFooter %}
 
 {% set htmlClasses = "app-html-class" %}
 {% set htmlLang = "en" %}
@@ -22,7 +22,7 @@
 
 <head>
   <meta charset="utf-8">
-<title>{% block pageTitle %}{{ pageSettings.serviceName | default('GOV.UK') }}{% endblock %}</title>
+<title>{% block pageTitle %}Find a test centre for an HGV, bus or trailer MOT{% endblock %}</title>
 
 {% block headIcons %}
   <link rel="shortcut icon" href="/assets/images/favicon.ico" type="image/x-icon" />
@@ -53,7 +53,7 @@
   {{ govukHeader({
     homepageUrl: "#",
     containerClasses: "govuk-width-container",
-    serviceName: pageSettings.serviceName | default('GOV.UK'),
+    serviceName: "Find a test centre for an HGV, bus or trailer MOT",
     serviceUrl: "#"
   }) }}
   
@@ -67,20 +67,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  {% if not pageSettings.hideNewServiceBanner %}
-    {{ govukPhaseBanner({
-      tag: {
-        text: "alpha"
-      },
-      html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
-    }) }}
-  {% endif %}
-  {% if not pageSettings.hideBackLink %}
-    {{ govukBackLink({
-      href: "#",
-      text: "Back"
-    }) }}
-  {% endif %}
+
 {% endblock %}
 
 {% block content %}
@@ -118,8 +105,3 @@
 {% endblock %}
 </body>
 </html>
-
-
-
-
-
