--- a/src/views/search/show.njk
+++ b/src/views/search/show.njk
@@ -1,6 +1,6 @@
-{% from "../govuk-frontend/govuk/components/input/macro.njk" import govukInput %}
-{% from "../govuk-frontend/govuk/components/fieldset/macro.njk" import govukFieldset %}
-{% from "../govuk-frontend/govuk/components/button/macro.njk" import govukButton %}
+{% from "govuk-frontend/govuk/components/input/macro.njk" import govukInput %}
+{% from "govuk-frontend/govuk/components/fieldset/macro.njk" import govukFieldset %}
+{% from "govuk-frontend/govuk/components/button/macro.njk" import govukButton %}
 {% import "includes/errors.njk" as error %}
 
 {% extends "layouts/layout.njk" %}
