--- a/src/views/layouts/layout.njk
+++ b/src/views/layouts/layout.njk
@@ -67,7 +67,17 @@
 {% endblock %}
 
 {% block beforeContent %}
+  {{ govukPhaseBanner({
+    tag: {
+      text: "alpha"
+    },
+    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+  }) }}
 
+  {{ govukBackLink({
+    href: "#",
+    text: "Back"
+  }) }}
 {% endblock %}
 
 {% block content %}
