Bugfix/ATF Town

--- a/src/views/includes/atf-search-result.njk
+++ b/src/views/includes/atf-search-result.njk
@@ -21,7 +21,7 @@
                 <br>
               {% endif %}
             </span>
-            <span class="dvsa-town">{{ data.town }}</span><br>
+            <span class="dvsa-town">{{ data.address.town }}</span><br>
             <span class="dvsa-postcode">{{ data.address.postcode }}</span>
           </p>
 
