Feature/Add back button js

--- a/src/views/layouts/layout.njk
+++ b/src/views/layouts/layout.njk
@@ -76,7 +76,8 @@
 
   {{ govukBackLink({
     href: "#",
-    text: "Back"
+    text: "Back",
+    attributes: { onclick: "goBack();return false;" }
   }) }}
 {% endblock %}
 
