--- a/src/public/scss/index.scss
+++ b/src/public/scss/index.scss
@@ -1,6 +1,5 @@
-@import '../../node_modules/govuk-frontend/govuk/all.scss';
+@import '../../../node_modules/govuk-frontend/govuk/all.scss';
 
 // Custom styles for specific views
 @import './search.scss';
 @import './pagination.scss';
-@import './atf.scss'
