--- a/src/public/scss/pagination.scss
+++ b/src/public/scss/pagination.scss
@@ -1,87 +1,86 @@
 
-.nav {
-    display: block;
-}
+$min-width-breakpoint: 642px;
 
 .pagination .pagination_list-items {
-
-    li {
-      display: inline-block;
-      a {
-        //@include govuk-font(19, $weight: bold);
-       
-        color: govuk-colour("blue");
-        display: inline-block;
-        padding: 15px 5px 10px 5px;
-        margin-right: 15px;
-        text-decoration: none;
-  
-        &:focus {
-          outline: 0;
-        }
-      }
-      &.active a,
-      &.active a:hover {
-        color: $govuk-link-colour;
-        -webkit-box-shadow: inset 0px -5px 0px 0px $govuk-link-colour;
-        -moz-box-shadow: inset 0px -5px 0px 0px $govuk-link-colour;
-        box-shadow: inset 0px -5px 0px 0px $govuk-link-colour;
-      }
-    }
-  }
-  
-  .padding {
-    padding-left: 15px;
-  }
-  
-  .pagination {
-    padding: 0;
-    font-family: 'GDS Transport', sans-serif;
-  }
-  .pagination__item {
+  li {
     display: inline-block;
-    list-style: none;
-  }
-  .pagination__link {
-    display: block;
-    padding: 5px 10px;
-    text-decoration: none;
-  
-    &:hover, &:focus {
-      background:  $govuk-focus-colour;
-      outline: 3px solid  $govuk-focus-colour;
-    }
-  
-    &.pagination__current {
-      color: $govuk-text-colour;
-      font-weight: 700;
-      border: none;
-      pointer-events: none;
-      cursor: default;
-  
-      &:hover, &:focus {
-        color: $govuk-text-colour;
-        background: none;
+
+    a {
+      color: govuk-colour("blue");
+      display: inline-block;
+      padding: 15px 5px 10px 5px;
+      margin-right: 15px;
+      text-decoration: none;
+
+      &:focus {
+        outline: 0;
       }
     }
-  }
-  
-  .pagination__summary_top {
-    font-family: 'GDS Transport', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    padding: 8px 0  ;
-  
-    @media (min-width: 642px) {
-      float: left;
+
+    &.active a,
+    &.active a:hover {
+      color: $govuk-link-colour;
+      -webkit-box-shadow: inset 0px -5px 0px 0px $govuk-link-colour;
+      -moz-box-shadow: inset 0px -5px 0px 0px $govuk-link-colour;
+      box-shadow: inset 0px -5px 0px 0px $govuk-link-colour;
     }
+  }
+}
+  
+.padding {
+  padding-left: 15px;
+}
+
+.pagination {
+  padding: 0;
+  font-family: 'GDS Transport', sans-serif;
+}
+
+.pagination__item {
+  display: inline-block;
+  list-style: none;
+}
+
+.pagination__link {
+  display: block;
+  padding: 5px 10px;
+  text-decoration: none;
+
+  &:hover, &:focus {
+    background: $govuk-focus-colour;
+    outline: 3px solid $govuk-focus-colour;
   }
 
-  .pagination__summary {
-    font-family: 'GDS Transport', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    padding: 8px 0  ;
-  
-    @media (min-width: 642px) {
-      float: right;
+  &.pagination__current {
+    color: $govuk-text-colour;
+    font-weight: 700;
+    border: none;
+    pointer-events: none;
+    cursor: default;
+
+    &:hover, &:focus {
+      color: $govuk-text-colour;
+      background: none;
     }
   }
+}
+
+.pagination__summary_top {
+  font-family: 'GDS Transport', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  padding: 8px 0;
+
+  @media (min-width: $min-width-breakpoint) {
+    float: left;
+  }
+}
+
+.pagination__summary {
+  font-family: 'GDS Transport', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  padding: 8px 0;
+
+  @media (min-width: $min-width-breakpoint) {
+    float: right;
+  }
+}
