--- a/src/views/includes/pagination/__template.njk
+++ b/src/views/includes/pagination/__template.njk
@@ -1,6 +1,11 @@
-{% for row in params.rows %}
- {% if row %}
-    <li class="pagination__item  {%- if row.classes %} {{ row.classes }}{% endif %}"><a class="pagination__link {% if currentPage == row.page %} pagination__current {% endif %}" href="{% if row.href %} {{row.href}} {% else %} ?q={{search}}&page={{row.page}}{% endif %}" aria-label="Page {{row.page}}">{{row.page}}</a></li>
-{% endif %}
+{% set rangeEnd = (params.paginationSettings.scannedItemsCount / params.paginationSettings.perPage) + 1 %}
+
+{% for i in range(1, rangeEnd) %}
+  <li class="pagination__item">
+    <a class="govuk-link pagination__link {% if params.paginationSettings.currentPage == i %} pagination__current {% endif %}" 
+        href="{{ params.searchUri }}&page={{ i }}" 
+        aria-label="Page {{ i }}">
+      {{ i }}
+    </a>
+  </li>
 {% endfor %}
-   
