--- a/src/views/search/show.njk
+++ b/src/views/search/show.njk
@@ -5,10 +5,17 @@
 
 {% extends "layouts/layout.njk" %}
 
-{% block content %}
+{% block backLink %}
+  {{ govukBackLink({
+    href: "#",
+    text: "Back",
+    attributes: { id: "back-link" }
+  }) }}
+{% endblock %}
 
-  <div class="grid-row">
-    <div class="column-two-thirds">
+{% block content %}
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
 
       {% if hasError %}
         {{ error.summary(formErrors) }}
@@ -79,5 +86,4 @@
 
     </div>
   </div>
-
 {% endblock %}
