--- a/src/views/layouts/layout.njk
+++ b/src/views/layouts/layout.njk
@@ -51,10 +51,10 @@
 {% block header %}
 
   {{ govukHeader({
-    homepageUrl: "#",
+    homepageUrl: "https://www.gov.uk",
     containerClasses: "govuk-width-container",
     serviceName: "Find a test centre for an HGV, bus or trailer MOT",
-    serviceUrl: "#"
+    serviceUrl: "/"
   }) }}
   
 {% endblock %}
@@ -88,20 +88,12 @@
     meta: {
       items: [
         {
-          href: "#1",
-          text: "Help"
+          href: "/accessibility",
+          text: "Accessibility"
         },
         {
-          href: "#2",
-          text: "Cookies"
-        },
-        {
-          href: "#3",
-          text: "Contact"
-        },
-        {
-          href: "#4",
-          text: "Terms and conditions"
+          href: "/privacy",
+          text: "Privacy"
         }
       ]
     }
