--- a/src/views/search/show.njk
+++ b/src/views/search/show.njk
@@ -7,7 +7,7 @@
 
 {% block backLink %}
   {{ govukBackLink({
-    href: "#",
+    href: "https://www.gov.uk/find-mot-test-centre-hgv-bus-trailer",
     text: "Back",
     attributes: { id: "back-link" }
   }) }}
