--- a/src/views/layouts/layout.njk
+++ b/src/views/layouts/layout.njk
@@ -54,7 +54,7 @@
     homepageUrl: "https://www.gov.uk",
     containerClasses: "govuk-width-container",
     serviceName: "Find a test centre for an HGV, bus or trailer MOT",
-    serviceUrl: "/"
+    serviceUrl: "https://find-test-centre-hgv-bus-trailer-mot.service.gov.uk"
   }) }}
   
 {% endblock %}
@@ -66,7 +66,7 @@
     tag: {
       text: "alpha"
     },
-    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+    html: 'This is a new service – your <a class="govuk-link" href="https://www.gov.uk/done/find-mot-test-centre-hgv-bus-trailer">feedback</a> will help us to improve it.'
   }) }}
 {% endblock %}
 
