a fix for token issuer

--- a/src/views/search/results.njk
+++ b/src/views/search/results.njk
@@ -36,7 +36,7 @@
   <div class="govuk-grid-row">
     {{ govukDetails({
       summaryText: "Report that you cannot book an HGV, bus or trailer MOT test",
-      html: "<a class='govuk-link' href='https://smartsurvey.com/''>Tell DVSA</a> if you cannot find a test centre before your HGV, bus or trailer MOT is due."
+      html: "<a class='govuk-link' href='https://www.gov.uk/guidance/report-that-you-cannot-book-an-hgv-bus-or-trailer-mot'>Tell DVSA</a> if you cannot find a test centre before your HGV, bus or trailer MOT is due."
     }) }}
   </div>
 
