--- a/src/views/search/results.njk
+++ b/src/views/search/results.njk
@@ -1,6 +1,8 @@
 {% from "includes/atf/macro.njk" import renderAtf %}
 {% from "includes/pagination/macro.njk" import pagination %}
 {% from "govuk-frontend/govuk/components/details/macro.njk" import govukDetails %}
+{% from "govuk-frontend/govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
+{% from "govuk-frontend/govuk/components/button/macro.njk" import govukButton %}
 
 {% extends "layouts/layout.njk" %}
 
@@ -13,15 +15,45 @@
 {% endblock %}
 
 {% block content %}
-  <h1 class="govuk-heading-xl">
+  <h1 class="govuk-heading-xl dvsa-no-margin-bottom">
     Test centres near '{{ searchNormalised | escape }}'
     <p class="govuk-body-s"></p>
-    <div class="govuk-hint">
-      {% set start = (paginationSettings.currentPage - 1) * paginationSettings.perPage + 1 %}
-      {% set end = start + paginationSettings.itemsCount - 1 %}
-      {% set total = paginationSettings.scannedItemsCount %}
-      Showing {{ start }} to {{ end }} of {{ total }} results
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-one-half govuk-hint">
+        {% set start = (paginationSettings.currentPage - 1) * paginationSettings.perPage + 1 %}
+        {% set end = start + paginationSettings.itemsCount - 1 %}
+        {% set total = paginationSettings.scannedItemsCount %}
+        Showing {{ start }} to {{ end }} of {{ total }} results
+      </div>
+      <div class="govuk-grid-column-one-half">
+        <form method="POST" id="filter-results-form">
+          {{ govukCheckboxes({
+            idPrefix: "filter-checkboxes",
+            name: "filters",
+            classes: "govuk-checkboxes--small",
+            fieldset: {
+              legend: {
+                text: "Filter the results"
+              }
+            },
+            items: [
+              {
+                value: "removeNoAvailability",
+                text: "Remove test centres with no availability",
+                checked: filters.removeAtfsWithNoAvailability
+              }
+            ]
+          }) }}
+          {{ govukButton({
+            text: "Filter",
+            attributes: {
+              id: "filters-submit-button"
+            }
+          }) }}
+        </form>
+      </div>
     </div>
+
   </h1>
 
   <div class="search-results">
