Add Cookie Manager pages and new npm module
- Include DVSA cookie manager npm module
- Run init script on page in footer
- New route for the cookie and cookie preferences page
- New includes for the cookie banners
- Task #BL-11681

--- a/src/public/scss/index.scss
+++ b/src/public/scss/index.scss
@@ -4,3 +4,7 @@
 @import './search.scss';
 @import './pagination.scss';
 @import './privacy.scss';
+
+.capitalize:first-letter {
+    text-transform: capitalize;
+}
