--- a/src/views/includes/footerjs.njk
+++ b/src/views/includes/footerjs.njk
@@ -1,3 +1,5 @@
  {# Run JavaScript at end of the <body>, to avoid blocking the initial render. #}
   <script src="{{getAsset('all.js')}}"></script>
-  <script>window.GOVUKFrontend.initAll()</script>
+  <script>
+    window.GOVUKFrontend.initAll()
+  </script>
