Hide JS elements if JS not running on the browser
- Add a new class so only relevant elements are shown to users who do
not have JavaScript running on their browser
- Add <noscript> tag to html that should only be shown to users when
no JavaScript is running

--- a/src/public/scss/index.scss
+++ b/src/public/scss/index.scss
@@ -5,6 +5,20 @@
 @import './pagination.scss';
 @import './privacy.scss';
 
+.hidden {
+    display: none;
+}
+
+.js-show {
+    display: none;
+}
+
+.js-enabled{
+    .js-show {
+        display: inherit;
+    }
+}
+
 .capitalize:first-letter {
     text-transform: capitalize;
 }
