--- a/src/views/layouts/layout.njk
+++ b/src/views/layouts/layout.njk
@@ -5,6 +5,7 @@
 {% from "govuk-frontend/govuk/components/header/macro.njk" import govukHeader %}
 {% from "govuk-frontend/govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
 {% from "govuk-frontend/govuk/components/footer/macro.njk" import govukFooter %}
+{% from "includes/analytics/macro.njk" import bodyscript as gaBodyScript %}
 
 {% set htmlClasses = "app-html-class" %}
 {% set htmlLang = "en" %}
@@ -106,6 +107,8 @@
     }
   }) }}
 {% endblock %}
+
+{{ gaBodyScript(analytics) }}
 
 {% block bodyEnd %}
 {% include "includes/footerjs.njk" %}
