Copied style changes into head file so assets do not need deploying
- Ahead of ticket BL-11758 being completed, the style assets won't get
updated so moving new styles into the head file
- Updated copy on banner so it's reads better as per review comments

--- a/src/views/includes/cookie-manager/cookie-banner.njk
+++ b/src/views/includes/cookie-manager/cookie-banner.njk
@@ -1,4 +1,4 @@
-<div class="govuk-cookie-banner" id="cm_cookie_notification" aria-label="Cookies on find an MOT test centre for a heavy goods vehicle (HGV), bus or trailer">
+<div class="govuk-cookie-banner" id="cm_cookie_notification" aria-label="Cookies on the {{ serviceName }}">
     <div class="govuk-cookie-banner__message govuk-width-container">
 
         <div class="govuk-grid-row ">
